cmake_minimum_required(VERSION 2.6)
project(lap)
include_directories(src)
set(SOURCES)
set(SOURCES ${SOURCES} src/lap/ObjModel.h)
set(SOURCES ${SOURCES} src/lap/ObjModel.cpp)
set(SOURCES ${SOURCES} src/lap/ObjAdapt.h)
set(SOURCES ${SOURCES} src/lap/ObjAdapt.cpp)
set(SOURCES ${SOURCES} src/lap/MeshMath.h)
set(SOURCES ${SOURCES} src/lap/MeshMath.cpp)
set(SOURCES ${SOURCES} src/lap/MeshAsset.h)
set(SOURCES ${SOURCES} src/lap/MeshAsset.cpp)
set(SOURCES ${SOURCES} src/lap/MaterialAsset.h)
set(SOURCES ${SOURCES} src/lap/MaterialAsset.cpp)
set(SOURCES ${SOURCES} src/lap/lap.h)
source_group(src/lap FILES src/lap/ObjModel.h src/lap/ObjModel.cpp src/lap/ObjAdapt.h src/lap/ObjAdapt.cpp src/lap/MeshMath.h src/lap/MeshMath.cpp src/lap/MeshAsset.h src/lap/MeshAsset.cpp src/lap/MaterialAsset.h src/lap/MaterialAsset.cpp src/lap/lap.h)
add_library(lap STATIC ${SOURCES})
install (TARGETS lap DESTINATION lib)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem)
include_directories(${Boost_INCLUDE_DIRS})
target_link_libraries(lap ${Boost_LIBRARIES})
install (FILES src/lap/ObjModel.h DESTINATION include/lap)
install (FILES src/lap/ObjAdapt.h DESTINATION include/lap)
install (FILES src/lap/MeshMath.h DESTINATION include/lap)
install (FILES src/lap/MeshAsset.h DESTINATION include/lap)
install (FILES src/lap/MaterialAsset.h DESTINATION include/lap)
install (FILES src/lap/lap.h DESTINATION include/lap)
set(SOURCES)
set(SOURCES ${SOURCES} apps/objdump/objdump.cpp)
source_group(apps/objdump FILES apps/objdump/objdump.cpp)
add_executable(objdump ${SOURCES})
install (TARGETS objdump DESTINATION bin)
add_dependencies(objdump lap)
target_link_libraries(objdump lap)
set(SOURCES)
set(SOURCES ${SOURCES} apps/meshdump/meshdump.cpp)
source_group(apps/meshdump FILES apps/meshdump/meshdump.cpp)
add_executable(meshdump ${SOURCES})
install (TARGETS meshdump DESTINATION bin)
add_dependencies(meshdump lap)
target_link_libraries(meshdump lap)
set(SOURCES)
set(SOURCES ${SOURCES} apps/lapinfo/lapinfo.cpp)
source_group(apps/lapinfo FILES apps/lapinfo/lapinfo.cpp)
add_executable(lapinfo ${SOURCES})
install (TARGETS lapinfo DESTINATION bin)
add_dependencies(lapinfo lap)
target_link_libraries(lapinfo lap)
set(SOURCES)
set(SOURCES ${SOURCES} tests/mesh2obj/mesh2obj.cpp)
source_group(tests/mesh2obj FILES tests/mesh2obj/mesh2obj.cpp)
add_executable(mesh2obj ${SOURCES})
install (TARGETS mesh2obj DESTINATION bin)
add_dependencies(mesh2obj lap)
target_link_libraries(mesh2obj lap)
set(SOURCES)
set(SOURCES ${SOURCES} apps/lapquery/lapquery.cpp)
source_group(apps/lapquery FILES apps/lapquery/lapquery.cpp)
add_executable(lapquery ${SOURCES})
install (TARGETS lapquery DESTINATION bin)
add_dependencies(lapquery lap)
target_link_libraries(lapquery lap)
